<resources>
    <string name="app_name">Soft Sound</string>
    <string name="notification_message">Soft Sound is running…</string>

    <string name="rain">Rain</string>
    <string name="storm">Storm</string>
    <string name="water">Water</string>
    <string name="fire">Fire</string>
    <string name="wind">Wind</string>
    <string name="forest">Forest</string>
    <string name="night">Night Sounds</string>
    <string name="cat">Cat Purr</string>

    <string name="start_timer">Start timer</string>
    <string name="cancel_timer">Cancel timer</string>
</resources>
